<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple_200"
        android:gravity="center"
        android:padding="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="-20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp"
            android:background="@color/purple_200">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_welcome"
                android:textColor="@color/white"
                android:textSize="32sp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_login_or_reg"
                android:alpha="0.7"
                android:textColor="@color/white"
                android:textSize="16sp"
                >
            </TextView>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_email"
                android:alpha="0.7"
                android:textColor="@color/white"
                android:textSize="16sp"
                >
            </TextView>
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:contentDescription="Enter How Much Cookies You Want"
                android:hint="aboba@gmail.com"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/colorGray"
                android:textColor="@color/white">
            </EditText>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_password"
                android:alpha="0.7"
                android:textColor="@color/white"
                android:textSize="16sp"
                >
            </TextView>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_show_icon">
            </EditText>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_page_remember"
                    android:alpha="0.7"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white">

                </CheckBox>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_page_register"
                    android:alpha="1"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">

                </TextView>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp">
            </View>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonToLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_page_login"
                android:textColor="@color/purple_200"
                app:cornerRadius="15dp">

            </com.google.android.material.button.MaterialButton>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp">
            </View>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:text="Выход"
                android:textColor="@color/purple_200"
                app:cornerRadius="15dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>